# openalgo-autonomous-research

./: .env.example  .gitignore  404.html  Makefile  README.md  dashboard.html  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  skills-lock.json
.agents/: AGENTS.md
.autoresearch/: experiment_log.jsonl  loop.py  prepare.py  program.md  strategy.py  strategy.py.bak
autoresearch/: autoresearch.py  calculate_individual_orb_results.py  count_long_short.py  prepare.py  train.py
backtest_results/: backtest_summary.json  opt_backtest_summary.json  opt_trades_15m.csv  opt_trades_1h.csv  opt_trades_5m.csv  rsi_divergence_backtest_report.md  rsi_divergence_backtest_report.md.metadata.json  trades_15m.csv  trades_1h.csv  trades_5m.csv
config/: banknifty_intraday_mean_reversion.yaml  consumer_fmcg_low_vol_intraday.yaml  default_research.yaml  defensive_pharma_fmcg_swing.yaml  example_research.yaml  heavyweight_hybrid_intraday_swing.yaml  heavyweight_short_scalper_intraday.yaml  indian_bluechips_swing_trend.yaml  mcx_vwap_rsi_intraday.yaml  midcap_high_alpha_swing.yaml  multisymbol_high_frequency_reversion_intraday.yaml  nifty_energy_power_trend_intraday.yaml  nifty_intraday_momentum.yaml  nifty_multi_timeframe_robust.yaml  nifty_orb_breakout_intraday.yaml  nifty_realty_infra_momentum_intraday.yaml  nse_index_options_volatility_intraday.yaml  orb_vwap_optimized.yaml  precision_sniper_research.yaml  psu_bank_high_beta_intraday.yaml  reliance_vwap_scalp_intraday.yaml  sbin_intraday_light.yaml  sbin_intraday_ml.yaml  sector_auto_momentum_intraday.yaml  test_ml_research.yaml  (+3 more)
(+200 files in other folders)
