[project]
name = "quant-engine"
version = "0.1.0"
description = "OpenAlgo Autonomous Quant Research Engine - Offline systematic strategy discovery, validation, and export"
authors = [{name = "Mukesh M"}]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "pyyaml>=6.0",
    "fastapi>=0.109",
    "uvicorn[standard]>=0.27",
    "typer[all]>=0.9",
    "jinja2>=3.1",
    "httpx>=0.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.2",
]
docs = [
    "mkdocs>=1.5",
    "mkdocs-material>=9.5",
    "pymdown-extensions>=10.0",
]
full = [
    "duckdb>=0.10",
    "numba>=0.59",
]

[project.scripts]
quant-engine = "quant_engine.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = [
    "E501",  # Line too long
    "F841",  # Local variable assigned but never used
]

[tool.pytest.ini_options]
testpaths = ["tests"]
